--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -772,11 +772,9 @@ button.btn-link.active {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(
-    to bottom,
-    var(--overlay-bg-dark),
-    var(--overlay-bg-darker)
-  );
+  background: linear-gradient(to bottom,
+      var(--overlay-bg-dark),
+      var(--overlay-bg-darker));
   display: flex;
   align-items: flex-end;
   padding: 15px;
@@ -977,11 +975,11 @@ button.btn-link.active {
   transition: 0.3s;
 }
 
-.switch input:checked + .slider {
+.switch input:checked+.slider {
   background-color: var(--primary);
 }
 
-.switch input:checked + .slider:before {
+.switch input:checked+.slider:before {
   transform: translateX(16px);
 }
 
@@ -1117,7 +1115,7 @@ button.btn-link.active {
   align-items: center;
 }
 
-.breadcrumb-item + .breadcrumb-item::before {
+.breadcrumb-item+.breadcrumb-item::before {
   content: none !important;
 }
 
@@ -1173,10 +1171,11 @@ button.btn-link.active {
   display: flex;
   gap: 10px;
   margin: 0 auto;
+  height: 300px;
 }
 
 .main-photo {
-  flex: 2;
+  flex: 1.5;
   min-width: 0;
 }
 
@@ -1185,7 +1184,7 @@ button.btn-link.active {
   height: auto;
   display: block;
   border-radius: 5px;
-  /*height: 400px;*/
+  height: 300px;
   object-fit: cover;
 }
 
@@ -1198,7 +1197,7 @@ button.btn-link.active {
 }
 
 @media (max-width: 768px) {
-  .main-photo img {
+  .gallery-container{
     height: auto;
   }
 
@@ -2502,12 +2501,10 @@ img.payment-icon-table {
   left: -100%;
   height: 100%;
   width: 100%;
-  background: linear-gradient(
-    90deg,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 0.2) 50%,
-    rgba(255, 255, 255, 0) 100%
-  );
+  background: linear-gradient(90deg,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 0.2) 50%,
+      rgba(255, 255, 255, 0) 100%);
   animation: loading 1.5s infinite;
 }
 
@@ -2515,9 +2512,11 @@ img.payment-icon-table {
   0% {
     left: -100%;
   }
+
   50% {
     left: 100%;
   }
+
   100% {
     left: 100%;
   }
@@ -2536,4 +2535,13 @@ img.payment-icon-table {
 .resorts,
 .cart {
   min-height: 50dvh;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.modal-overlay.jsx-c79782b35ce44790 {
+  z-index: 10000 !important;
+
 }
